--- a/public/index.html
+++ b/public/index.html
@@ -39,11 +39,12 @@
         <div class="canvas-search search-switch">
             <i class="fa fa-search"></i>
         </div>
+        
         <nav class="canvas-menu mobile-menu">
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="{{ path('app_reserv_i') }}">Reservation</a></li>
-                <li><a href="./classes.html">Classes</a></li>
+                <li><a href="./classes.html">Evenement</a></li>
                 <li><a href="./services.html">Services</a></li>
                 <li><a href="./team.html">Our Team</a></li>
                 <li><a href="#">Pages</a>
